fixed layout on mobile design view

--- a/css/index.css
+++ b/css/index.css
@@ -190,9 +190,19 @@ section .codeImage {
   padding: 0 10px;
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-end;
+  /* align-items: flex-end; */
 
 }
+
+/* .bottom-content {
+  margin-top: 37px;
+  padding: 0 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+
+} */
 
 .main-content .bottom-content .text-content {
   width: 275px;
@@ -223,9 +233,9 @@ section .codeImage {
 
 .containerbod div {
 	border: 1px solid rgb(0, 0, 0) ;
-  /*display: flex;
+  /* display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;*/
+  justify-content: space-between; */
 	background-color: rgb(243, 243, 243);
 }
 
@@ -420,7 +430,7 @@ header nav {
   flex-direction: column;
   align-items: center;
 
-}
+} 
 header nav a {
     font-size: 18px;
     color: gray;
@@ -440,43 +450,24 @@ header nav a {
   size:5px;
 }
 
-.main-content {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  margin: 0%
-  width: 100%;
 
-}
 .main-content div {
   display: flex;
   flex-direction: column;
-  text-align: left
-  width: 100%;
-}
-
-.top-content, .bottom-content {
-  line-height: 20px;
-  width: 100%;
-
-}
-
-.text-content {
+  align-items: flex-start;
+} 
+.bottom-content div {
   display: flex;
   flex-direction: column;
-  text-align: left;
-  margin-top: 2%;
-
+  width: 100%;
 }
 
-.bottom-content{
-  width: 68%;
 
-}
+
 button{
   display:flex;
   justify-content: center;
-  padding: 3%;
+  padding: 2%;
   margin: 23%;
 
 }
@@ -488,7 +479,7 @@ button{
 }
 
 .contact p {
-  margin: 0%;
+  margin: 3%;
   padding-top: 2%;
   padding-left: 0%;
 }
@@ -496,5 +487,4 @@ button{
 .middle-img {
   width: 100%;
 }
-
-  }
+}
